refactor(test): Migrate test launcher, handlers, and integration tests to new API
Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>